<resources>
    <string name="app_name">Calculator</string>
    <string name="nameBtnMainLayout">Начнём вычисления</string>
    <string name="calcViewMain">Изображение калькулятора</string>
    <string name="_0">0</string>
    <string name="textBtnAC">AC</string>
    <string name="textBtnPlusMinus">+/-</string>
    <string name="textBtnPercent">%</string>
    <string name="textBtnDiv">/</string>
    <string name="textBtnSeven">7</string>
    <string name="textBtnNine">9</string>
    <string name="textBtnMulti">*</string>
    <string name="textBtnEight">8</string>
    <string name="textBtnFour">4</string>
    <string name="textBtnFive">5</string>
    <string name="textBtnSix">6</string>
    <string name="textBtnMinus">-</string>
    <string name="textBtnOne">1</string>
    <string name="textBtnTwo">2</string>
    <string name="textBtnThree">3</string>
    <string name="textBtnPlus">+</string>
    <string name="textBtnZero">0</string>
    <string name="textBtnComma">,</string>
    <string name="textBtnEqually">=</string>
</resources>